# Project-ZR300I

./: .gitattributes  .gitignore  BuildARM.sh  README.md  bootable.iso  output.iso  uefi.img
Bootloader_architectures/arm64/: Cargo.toml  bootloader.s  linker.ld  read.md
Bootloader_architectures/arm64/src/: main.rs
TargoBoot/: BOOTAA64.EFI  boot.s  building.md  read.md
arm_tests/: boot.asm
boot/: Cargo.toml  README.md  output.iso
boot/iso/EFI/BOOT/: BOOTAA64.EFI
boot/src/: main.rs
bootloader/: Building.md  Makefile  boot.asm  read.md
bootloader/source/: boot.asm
gen_files/EFI/BOOT/: BOOTX64.EFI
iso_builder/: Cargo.toml  output.iso
iso_builder/src/: main.rs
kernal/: Cargo.toml
kernal/src/: main.rs
old/arm_tests/boot/: Cargo.toml
temp_build_files/: BOOTAA64.EFI
test/EFI/BOOT/: BOOTAA64.EFI
