[package]
name = "boot"
version = "0.1.0"
edition = "2021"

#[profile.release]
#panic = "abort"

[build]
build-stage = 1
target = ["aarch64-unknown-uefi"]

[dependencies]
log = "0.4.21"
uefi = { version = "0.33.0", features = ["panic_handler", "logger"] }

[toolchain]
targets = ["aarch64-unknown-uefi", "i686-unknown-uefi", "x86_64-unknown-uefi"]
